<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/img_project" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/code_read"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:onClick="onClick"
            android:text="@string/code_read"
            android:textSize="20dp" />

        <Button
            android:id="@+id/code_write"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/code_write"
            android:textSize="20dp" />

        <Button
            android:id="@+id/code_test"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/code_test"
            android:textSize="18dp" />

        <Button
            android:id="@+id/code_example"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/code_example"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>